@@ -5,6 +5,8 @@ h2. 1.1.7 unreleased
 * improve 'home_page' recipe to show how to set a home page for Devise authenticated users
 * improve 'devise' recipe for Devise 'confirmable' option
 * improve 'cleanup' recipe to remove commented lines from config/routes.rb
+* improve 'html5' recipe to allow choice of bootstrap_less or bootstrap_sass
+* remove 'css_setup' recipe (consolidated with 'html5' recipe)
 
 h2. 1.1.6 February 28, 2012
 
